# avm

./: .gitmodules  CMakeLists.txt
bench/: CMakeLists.txt  avm_bench.cpp  baseline.c  benchmark_names.txt  cycles_c.txt  cycles_instruction.txt  instructions.asm
bench/c/: bubble1.c  bubble2.c  bubble4.c  call_args.c  constant_arith.c  crc16.c  divmod.c  fibonacci.c  fir8.c  fixed_point.c  float.c  indirect_call.c  loop_control.c  memory_services.c  mixed_width.c  multiply.c  pointer_walk.c  progmem_walk.c  progmem_widen_ldp16.c  progmem_widen_ldp32_bytes.c  progmem_widen_ldp32_words.c  record_scan.c  reverse_walk.c  select.c  shifts.c  sieve.c  small_memops.c  stack_array.c  state_machine.c  string_scan.c  struct_copy.c  switch.c  sys_memcmp.c  sys_memcmp_p.c  sys_strcmp.c  sys_strcmp_p.c  sys_strlen.c  sys_strlen_p.c  sys_strncat.c  sys_strncat_p.c  (+5 more)
bench/c/asm/: bubble1.asm  bubble2.asm  bubble4.asm  call_args.asm  constant_arith.asm  crc16.asm  divmod.asm  fibonacci.asm  fir8.asm  fixed_point.asm  float.asm  indirect_call.asm  loop_control.asm  memory_services.asm  mixed_width.asm  multiply.asm  pointer_walk.asm  progmem_walk.asm  progmem_widen_ldp16.asm  progmem_widen_ldp32_bytes.asm  progmem_widen_ldp32_words.asm  record_scan.asm  reverse_walk.asm  select.asm  shifts.asm  sieve.asm  small_memops.asm  stack_array.asm  state_machine.asm  string_scan.asm  struct_copy.asm  switch.asm  sys_memcmp.asm  sys_memcmp_p.asm  sys_strcmp.asm  sys_strcmp_p.asm  sys_strlen.asm  sys_strlen_p.asm  sys_strncpy.asm  tail_calls.asm  (+2 more)
bench/results/o2-stabilization/: REPORT.md  ablation_table.csv  ablation_variable_effects.csv  changed_files_manifest.txt  configuration_summary.csv  cycles_c_final_os.txt  cycles_c_original_o2.txt  cycles_instruction_final_o2.txt  final_comparison.csv  final_size_comparison.csv  float-post-greedy-check.mir  float-pre-greedy-check.mir  memory_threshold_comparison.csv  ra_comparison.csv  run_ablation_config.ps1  taildup_comparison.csv  text_sizes_original_o2.csv
bench/results/o2-stabilization/assembly_original_o2/: bubble1.asm  bubble2.asm  bubble4.asm  call_args.asm  constant_arith.asm  crc16.asm  divmod.asm  fibonacci.asm  fir8.asm  fixed_point.asm  float.asm  indirect_call.asm  loop_control.asm  memory_services.asm  mixed_width.asm  multiply.asm  pointer_walk.asm  progmem_walk.asm  progmem_widen_ldp16.asm  progmem_widen_ldp32_bytes.asm  progmem_widen_ldp32_words.asm  record_scan.asm  reverse_walk.asm  select.asm  shifts.asm  sieve.asm  small_memops.asm  stack_array.asm  state_machine.asm  string_scan.asm  struct_copy.asm  switch.asm  sys_memcmp.asm  sys_memcmp_p.asm  sys_strcmp.asm  sys_strcmp_p.asm  sys_strlen.asm  sys_strlen_p.asm  sys_strncat.asm  sys_strncat_p.asm  (+3 more)
bench/results/o2-stabilization/cost0-regs12-avgfalse/: configuration.txt  cycles.txt  metrics.csv  ra_metrics.csv
bench/results/o2-stabilization/cost0-regs12-avgtrue/: configuration.txt  cycles.txt  metrics.csv  ra_metrics.csv
bench/results/o2-stabilization/cost0-regs8-avgfalse/: configuration.txt  crc16_avm_test_main.asm  metrics.csv  ra_metrics.csv
bench/results/o2-stabilization/cost0-regs8-avgtrue/: configuration.txt  crc16_avm_test_main.asm  metrics.csv  ra_metrics.csv
bench/results/o2-stabilization/cost1-regs12-avgfalse/: configuration.txt  metrics.csv  ra_metrics.csv
bench/results/o2-stabilization/cost1-regs12-avgtrue/: configuration.txt  (+4 more)
tests/: CMakeLists.txt  avm_tests.cpp  avm_tests.py  codegen_smoke.c
tests/asm/: add32.asm  add32_output.txt  add_compact.asm  add_compact_output.txt  add_full.asm  add_full_output.txt  add_upper.asm  addi_s8_compact.asm  addi_s8_lower.asm  addi_s8_lower_output.txt  addi_s8_upper.asm  addi_s8_upper_output.txt  adjsp.asm  adjsp_output.txt  and_compact.asm  and_compact_output.txt  and_full.asm  and_full_output.txt  and_upper.asm  asr16_1.asm  asr16_1_output.txt  asr16i.asm  asr16i_output.txt  asr16v.asm  asr16v_output.txt  asr32_1.asm  asr32_1_output.txt  basic_accumulator_logic.asm  basic_accumulator_logic_output.txt  basic_add32.asm  basic_add32_output.txt  basic_adjsp.asm  basic_adjsp_output.txt  basic_asr16.asm  basic_asr16_output.txt  basic_asr8.asm  basic_asr8_output.txt  basic_beq_short.asm  basic_beq_short_output.txt  basic_bne_short.asm  (+337 more)
tests/asm/include/: absolute_memory_test.inc  cold32_test.inc  cold_stack_test.inc  compact_matrix_test.inc  compact_stack_relative_test.inc  conditional_test.inc  debug_output.inc  divrem16_test.inc  f1_utility_test.inc  f7_32bit_test.inc  f9_bitwise_test.inc  fa_shift_test.inc  fp_binary_test.inc  fp_compare_class_test.inc  fp_conversion_test.inc  fp_unary_test.inc  full_matrix_test.inc  general_pointer_test.inc  multiplication_test.inc  primitive_output.inc  program_load_test.inc  secondary_memory_test.inc  stack_test_output.inc  sys_libm_test.inc  unary_test.inc  upper_matrix_test.inc  upper_stack_relative_test.inc
tests/c/: avm_test.h  calls.c  codegen_calls.c  codegen_calls_output.txt  codegen_control.c  codegen_control_output.txt  codegen_float.c  codegen_float_output.txt  codegen_integer.c  codegen_integer_output.txt  codegen_memory.c  codegen_memory_output.txt  codegen_stack.c  codegen_stack_output.txt  constant_arith_result.c  constant_arith_result_output.txt  data_model.c  frames.c  globals.c  integrated.c  progmem_widen.c  progmem_widen_output.txt  sprite_erase.c  sprite_overwrite.c  sprite_plus_mask.c  sprite_self_masked.c  string_progmem_compare.c  string_progmem_compare_output.txt  string_progmem_copy.c  string_progmem_copy_output.txt  string_ram_compare.c  string_ram_compare_output.txt  string_ram_copy.c  string_ram_copy_output.txt  test_hex_output.h
tests/c/asm/: codegen_calls.asm  codegen_control.asm  codegen_float.asm  codegen_integer.asm  codegen_memory.asm  codegen_stack.asm  constant_arith_result.asm  data_model.asm  progmem_widen.asm  sprite_erase.asm  sprite_overwrite.asm  sprite_plus_mask.asm  sprite_self_masked.asm  string_progmem_compare.asm  string_progmem_copy.asm  string_ram_compare.asm  string_ram_copy.asm
tests/cpp/: data_model.cpp
tests/cpp/asm/: data_model.asm
(+343 files in other folders)
